--- a/app/views/flortrait.html
+++ b/app/views/flortrait.html
@@ -154,5 +154,5 @@
       </address>
     </div>
   </div>
-  <back-top class="hidden-xs"><span class="glyphicon glyphicon-menu-up"></span></back-top>
+  <back-top class="hidden-xs"><i class="fa fa-angle-up text-muted" aria-hidden="true" style="font-size: 24px;"></i></back-top>
 </div>
