--- a/app/views/contact.html
+++ b/app/views/contact.html
@@ -17,9 +17,9 @@
   </div>
   <div class="row">
     <div class="col-md-offset-1 col-md-3 col-sm-offset-1 col-sm-5 col-xs-offset-1 col-xs-10">
-      <h2 class="ch2">Postanschrift</h2>
+      <h2>Postanschrift</h2>
       <hr>
-      <h3 class="ch3">
+      <h3>
         <address>
           playful solutions<br>
           Anja Wippler<br>
@@ -29,17 +29,17 @@
       </h3>
     </div>
     <div class="col-md-offset-0 col-md-4 col-sm-offset-0 col-sm-5 col-xs-offset-1 col-xs-10 no-padding-r-sm">
-      <h2 class="ch2">Mail &amp; Telefon</h2>
+      <h2>Mail &amp; Telefon</h2>
       <hr>
-      <h3 class="ch3">
+      <h3>
         <i class="fa fa-paper-plane margin-r" aria-hidden="true"></i>anja.wippler@icloud.com
       </h3>
-      <h3 class="ch3">
+      <h3>
         <i class="fa fa-mobile margin-r cfa-small-icon-lift" aria-hidden="true"></i>+49 (0) 176 21534966
       </h3>
     </div>
     <div class="col-md-offset-0 col-md-3 col-sm-offset-1 col-sm-10 col-xs-offset-1 col-xs-10">
-      <h2 class="ch2">Im Web</h2>
+      <h2>Im Web</h2>
       <hr>
       <h1><a class="text-default" href="https://www.instagram.com/playfuldesignsolutions/" target="_blank"><i
         class="fa fa-instagram margin-r"></i></a><a class="text-default" href="https://www.facebook.com/flortrait/"
