--- a/app/views/flortrait.html
+++ b/app/views/flortrait.html
@@ -13,7 +13,7 @@
         Bühne frei für deinen Blumenstrauß. Das Flortrait ist die erste Vase für die Wand und somit ein echt
         lebendiges Stillleben für dein Zuhause.
       </h3>
-      <h4 class="hidden-sm hidden-xs"><a ng-click="vm.moveToSection('section-variants', 100)">Varianten ></a></h4>
+      <h3 class="hidden-sm hidden-xs"><a ng-click="vm.moveToSection('section-variants', 100)">Varianten &gt;</a></h3>
     </div>
     <div class="col-md-6 col-sm-6 hidden-xs margin-t-20 margin-t-40-lg animated fadeIn">
       <div class="img-flortrait-s01"></div>
@@ -80,7 +80,7 @@
         bedruckt oder mit Stoff bezogen - du bestimmst wie es am Ende aussieht.
       </h4>
       <h4 class="margin-t-50">
-        <a href="https://flortrait.wordpress.com" target="_blank">Lass dich im DIY-Blog inspirieren ></a>
+        <a href="https://flortrait.wordpress.com" target="_blank">Lass dich im DIY-Blog inspirieren &gt;</a>
       </h4>
     </div>
     <div class="col-lg-offset-1 col-lg-5 col-md-offset-1 col-md-6 col-sm-6 hidden-xs">
