--- a/app/views/contact.html
+++ b/app/views/contact.html
@@ -16,7 +16,7 @@
     </div>
   </div>
   <div class="row">
-    <div class="col-md-offset-1 col-md-3 col-sm-offset-1 col-sm-5 col-xs-offset-1 col-xs-10">
+    <div class="col-md-offset-1 col-md-3 col-sm-offset-0 col-sm-5 col-xs-offset-0 col-xs-12">
       <h2>Postanschrift</h2>
       <hr>
       <h3>
@@ -28,7 +28,7 @@
         </address>
       </h3>
     </div>
-    <div class="col-md-offset-0 col-md-4 col-sm-offset-0 col-sm-5 col-xs-offset-1 col-xs-10 no-padding-r-sm">
+    <div class="col-lg-3 col-md-offset-0 col-md-4 col-sm-offset-1 col-sm-6 col-xs-offset-0 col-xs-12 no-padding-r-sm">
       <h2>Mail &amp; Telefon</h2>
       <hr>
       <h3>
@@ -38,7 +38,7 @@
         <i class="fa fa-mobile margin-r cfa-small-icon-lift" aria-hidden="true"></i>+49 (0) 176 21534966
       </h3>
     </div>
-    <div class="col-md-offset-0 col-md-3 col-sm-offset-1 col-sm-10 col-xs-offset-1 col-xs-10">
+    <div class="col-md-offset-0 col-md-3 col-sm-offset-0 col-sm-12 col-xs-offset-0 col-xs-12">
       <h2>Im Web</h2>
       <hr>
       <h1><a class="text-default" href="https://www.instagram.com/playfuldesignsolutions/" target="_blank"><i
